# KISS-CosmicRayDataBase

./: .clang-format  .gitignore  CMakeLists.txt  README.md  analytical_model.ipynb  clean_db.sh  convert_original_tables.py  convert_table.py  generate_kiss_tables.py  generate_tables.py  generate_tables_leptons.py  plot_measurements.ipynb  read_table_ASI.py  read_table_CRDB.py  utils.py  write_table.py
data/: AMS02.txt  BESS-PolarI.txt  BESS-PolarII.txt  C_AMSPRL2017_rig_000.xml  H_AMS02_rig_CRDB.txt  H_CREAMIII_etot_mydata.txt  He_AMSPRL2017_rig_000.xml  He_CREAMIII_etotn_mydata.txt  O_AMSPRL2017_rig_000.xml  PAMELA.txt  crdb_datasets.json  data_exps.txt  get_crdb_data.py
data/KCDC/: KASCADE_2005_QGSJET-01_H_totalEnergy.txt  KASCADE_2005_SIBYLL-2.1_H_totalEnergy.txt  KASCADE_2005_SIBYLL-2.1_He_totalEnergy.txt  KASCADE_2005_SIBYLL-2.1_allParticle_totalEnergy.txt  KASCADE_2011_SIBYLL-2.1_H_totalEnergy.txt  README.md  Tibet_QGSJET+HD_allParticle_totalEnergy.txt  Tibet_QGSJET+PD_allParticle_totalEnergy.txt  Tibet_SIBYLL+HD_allParticle_totalEnergy.txt
data/mytables/: CALET_Cr_Fe_kineticEnergyPerNucleon.txt  CALET_Ti_Fe_kineticEnergyPerNucleon.txt  CALET_Ti_kineticEnergyPerNucleon.txt  CALET_e+e-_totalEnergy.txt  DAMPE_B_kineticEnergyPerNucleon.txt  DAMPE_Fe_kineticEnergy.txt  GRAPES-3_H_totalEnergy.txt  KASCADE_Kuznetsov2024_Fe_totalEnergy.txt  KASCADE_Kuznetsov2024_He_totalEnergy.txt  KASCADE_Kuznetsov2024_Si_totalEnergy.txt  LHAASO_helium_totalEnergy.txt  LHAASO_lnA_totalEnergy.txt  LHAASO_proton_totalEnergy.txt  README.md  VERITAS_e+e-_totalEnergy.txt
include/: AMS02.h  CRDB.h  CrDataset.h  KCDC.h  SSDC.h  allparticle.h  antiprotons.h  kiss.h  leptons.h  mydb.h  nuclei.h  tbd.h  utils.h
include/KISS/: CRDB.h  CrDataset.h  KCDC.h  SSDC.h  config.h  datapoint.h  enums.h  mytables.h  utils.h
kiss_crdata/: BC_AMS02_rigidity.txt  BC_ratio_AMS02_rigidity.txt  BO_AMS02_rigidity.txt  B_AMS02_rigidity.txt  BeC_AMS02_rigidity.txt  BeO_AMS02_rigidity.txt  Be_AMS02_rigidity.txt  CO_ratio_AMS02_rigidity.txt  C_AMS02_rigidity.txt  H_AMS02_rigidity.txt  LiC_AMS02_rigidity.txt  LiO_AMS02_rigidity.txt  Li_AMS02_rigidity.txt  MgO_ratio_AMS02_rigidity.txt  N_AMS02_rigidity.txt  NeO_ratio_AMS02_rigidity.txt  O_AMS02_rigidity.txt  SiMg_ratio_AMS02_rigidity.txt  SiO_ratio_AMS02_rigidity.txt  electrons_AMS02_kenergy.txt  electrons_FERMI_kenergy.txt  electrons_PAMELA_kenergy.txt  leptons_AMS02_kenergy.txt  leptons_CALET_kenergy.txt  leptons_DAMPE_kenergy.txt  leptons_FERMI_kenergy.txt  leptons_VERITAS_kenergy.txt  posfrac_AMS02_kenergy.txt  posfrac_FERMI_kenergy.txt  posfrac_PAMELA_kenergy.txt  positrons_AMS02_kenergy.txt  positrons_FERMI_kenergy.txt  positrons_PAMELA_kenergy.txt
kiss_tables/: AMS-02_Al_rigidity.txt  AMS-02_B_C_kineticEnergyPerNucleon.txt  AMS-02_B_C_rigidity.txt  AMS-02_B_O_rigidity.txt  AMS-02_B_rigidity.txt  AMS-02_Be_B_rigidity.txt  AMS-02_Be_C_rigidity.txt  AMS-02_Be_O_rigidity.txt  AMS-02_Be_rigidity.txt  AMS-02_C_O_rigidity.txt  AMS-02_C_rigidity.txt  AMS-02_F_B_rigidity.txt  AMS-02_F_Si_rigidity.txt  AMS-02_F_rigidity.txt  AMS-02_Fe_He_rigidity.txt  AMS-02_Fe_O_rigidity.txt  AMS-02_Fe_Si_rigidity.txt  AMS-02_Fe_rigidity.txt  AMS-02_H_He_rigidity.txt  AMS-02_H_e+_rigidity.txt  AMS-02_H_e-_rigidity.txt  AMS-02_H_rigidity.txt  AMS-02_He_O_rigidity.txt  AMS-02_He_rigidity.txt  AMS-02_Li_B_rigidity.txt  AMS-02_Li_C_rigidity.txt  AMS-02_Li_O_rigidity.txt  AMS-02_Li_rigidity.txt  AMS-02_Mg_O_rigidity.txt  AMS-02_Mg_rigidity.txt  AMS-02_N_B_rigidity.txt  AMS-02_N_O_rigidity.txt  AMS-02_N_rigidity.txt  AMS-02_Na_rigidity.txt  AMS-02_Ne_Mg_rigidity.txt  AMS-02_Ne_O_rigidity.txt  AMS-02_Ne_rigidity.txt  AMS-02_O_rigidity.txt  AMS-02_S_rigidity.txt  AMS-02_Si_Mg_rigidity.txt  (+354 more)
libs/pugixml/: CMakeLists.txt
scripts/: make_tarball.sh  regenerate.sh
source/: crdb_datasets.json  get_crdb_data.py  utils.py
source/CRDB/: README.md
source/KCDC/: KASCADE_2005_QGSJET-01_He_totalEnergy.txt  KASCADE_2005_QGSJET-01_allParticle_totalEnergy.txt  KASCADE_2011_EPOS-199_allParticle_totalEnergy.txt  KASCADE_2011_QGSJET-01_H_totalEnergy.txt  KASCADE_2011_QGSJET-01_allParticle_totalEnergy.txt  KASCADE_2011_QGSJET-II-02_H_totalEnergy.txt  KASCADE_2011_QGSJET-II-02_allParticle_totalEnergy.txt  KASCADE_2011_SIBYLL-2.1_allParticle_totalEnergy.txt
source/mytables/: CALET_Cr_kineticEnergyPerNucleon.txt  CALET_Fe_kineticEnergyPerNucleon.txt  CALET_Ti_kineticEnergyPerNucleon.txt  DAMPE_2025_C_kineticEnergy.txt  DAMPE_2025_Fe_kineticEnergy.txt  DAMPE_2025_H_kineticEnergy.txt  README.md  (+27 more)
src/: CRDB.cpp  CrDataset.cpp  KCDC.cpp  SSDC.cpp  main.cpp  mydb.cpp  mytables.cpp  nuclei.cpp  utils.cpp
(+32 files in other folders)
